Now emits notifications to websocket clients.
