# app.js
@@ -1,19 +1,33 @@
 'use strict';
 
 var config = require('./config');
-var SwaggerExpress = require('swagger-express-mw');
+var https = require('https');
+var fs = require('fs');
 var app = require('express')();
+var SwaggerExpress = require('swagger-express-mw');
 
-module.exports = app; // Added for testing
+//module.exports = app; // Added for testing
+
+
+var options = {
+	key: fs.readFileSync(config.web.options.key),
+	cert: fs.readFileSync(config.web.options.cert)
+};
+
 
 var mongoose = require('mongoose');
 var mongoURI = config.mongodb.uri;
-mongoose.connect(mongoURI, function (err, res) {
+mongoose.connect(mongoURI, function(err, res) {
 	if (err) {
 		console.log ('ERROR connecting to: ' + mongoURI + '. ' + err);
 	} else {
 		console.log ('Successfully connected to: ' + mongoURI);
 	}
+});
+
+
+app.get('/', function(req, res){
+	res.sendFile(__dirname + '/index.html');
 });
 
 
@@ -24,7 +38,11 @@ SwaggerExpress.create(config, function(err, swaggerExpress) {
 	swaggerExpress.register(app);
 
 	var port = config.web.port;
-	app.listen(port);
+	// var server = https.createServer(options, app).listen(port);
+	var server = app.listen(port); // uncomment to enable HTTP
+	var io = require('socket.io').listen(server);
+
+	config.web.io = io;
 
 	console.log('Started the API on port: ' + port);
 });
